--- a/wi_news/server/static/index.html
+++ b/wi_news/server/static/index.html
@@ -28,20 +28,20 @@
             </ul>
         </div>
         <div id="container" class="d-flex justify-content-center">
-            <div class="col-12 col-lg-8" v-if="category">
+            <div class="col-12 col-md-8" v-if="category">
                 <div v-for="cid in clusters[category].labels" class="mt-4 pt-3 pb-1 px-2" style="border-bottom: 1px solid darkseagreen ;">
                     <div class="w-100 mb-1">
                         <span class="d-flex justify-content-around align-bottom row">
-                            <h4 class="align-self-center col-12 col-lg-4">{{`Topic ${cid + 1}`}}</h4>
-                            <div class="col-12 col-lg-7 d-flex justify-content-between">
+                            <h4 class="align-self-center col-12 col-md-4">{{`Topic ${cid + 1}`}}</h4>
+                            <div class="col-12 col-md-7 d-flex justify-content-between">
                                 <a class="card-link" v-for="hashtag in clusters[category].hashtags[cid].map((x) => `#${x}`)">{{hashtag}}</a>
                             </div>
                             
                         </span>
                     </div>
-                    <div class="articles-top-3">
-                        <div class="card bg-light px-3 py-2 mb-2"
-                            v-for="article in data[category].filter((x) => x.cluster === cid).slice(0, 3)">
+                    <div class="articles-top-4 row d-flex justify-content-around">
+                        <div class="card bg-light px-3 py-2 mb-2 col-12 col-md-5 mx-2"
+                            v-for="article in data[category].filter((x) => x.cluster === cid).slice(0, 4)">
                             <img v-if="article.urlToImage" :src="article.urlToImage" alt="image of news">
                             <h5 class="card-title"><a :href="article.url" target="_blank">{{article.title}}</a></h5>
                             <h6 class="card-subtitle text-muted">{{ `${article.author}@${article.source.name} -
@@ -50,14 +50,14 @@
                             <span><a class="card-link" v-for="hashtag in article.hashtags.map((x) => `#${x}`)">{{hashtag}}</a></span>
                         </div>
                         <div class="justify-content-center align-items-center d-flex mb-1" >
-                            <a v-if="data[category].filter((x) => x.cluster === cid).length > 3" class="text-muted" onclick="showMore(this)" :for="`other${cid}`">
-                                --------show more--------
+                            <a v-if="data[category].filter((x) => x.cluster === cid).length > 4" class="text-muted" @click="toggleShowing(cid)">
+                                --------show {{showing[category][cid] ? "less" : "mode"}}--------
                             </a>                        
                         </div>
                     </div>
-                    <div class="articles-others" :id="`other${cid}`" hidden>
-                        <div class="card bg-light px-3 py-2 mb-2"
-                        v-for="article in data[category].filter((x) => x.cluster === cid).slice(3)">
+                    <div class="articles-others row d-flex justify-content-around" :id="`other${cid}`" v-if="showing[category][cid]">
+                        <div class="card bg-light px-3 py-2 mb-2 col-12 col-md-5 mx-2"
+                        v-for="article in data[category].filter((x) => x.cluster === cid).slice(4)">
                             <img v-if="article.urlToImage" :src="article.urlToImage" alt="image of news">
                             <h5 class="card-title"><a :href="article.url" target="_blank">{{article.title}}</a></h5>
                             <h6 class="card-subtitle text-muted">{{ `${article.author}@${article.source.name} -
@@ -81,6 +81,7 @@
                         category: "",
                         clusters: {},
                         data: {},
+                        showing: {},
                     }
                 },
                 methods: {
@@ -97,6 +98,14 @@
                             this.clusters = json.clusters;
                             this.data = json.data;
                             this.category = Object.keys(json.data)[0];
+
+                            const showing = {};
+                            for (let [category, cluster] of Object.entries(json.clusters)) {
+                                showing[category] = [];
+                                cluster.labels.forEach((x) => {showing[category].push(false);});
+                            }
+                            this.showing = showing;
+
                         } catch (err) {
                             this.searching = false;
                             console.log(err);
@@ -106,16 +115,12 @@
                     },
                     changeCategory(cate) {
                         this.category = cate;
-                    }
+                    },
+                    toggleShowing(cid) {
+                        this.showing[this.category][cid] = !this.showing[this.category][cid];
+                    },
                 }
             }).mount('#app');
-        </script>
-        <script>
-            function showMore(target) {
-                const other = document.getElementById(target.getAttribute('for'));
-                other.hidden = !other.hidden;
-                target.innerText = `--------${other.hidden ? 'show more': 'show less'}--------`;
-            }
         </script>
     </body>
 </html>
